# paramfit

./: .gitignore  pyproject.toml
examples/: hco_explicit_maemax.inp  n_stage_from_hco.inp
examples/staged_scf_dz/: README.md
examples/staged_scf_dz/1_CHO/: .paramfit_cho_explicit_maemax_final.out.swo  102_propyl_acetate_mp2_dz.out  105_p-hydroxybenzaldehyde_mp2_dz.out  111_t-butanol_mp2_dz.out  115_isopropyl_ether_mp2_dz.out  14_1-pentyne_mp2_dz.out  20_2-heptanone_mp2_dz.out  21_2-hexanone_mp2_dz.out  22_2-methoxyethanol_mp2_dz.out  2_1-2-ethanediol_mp2_dz.out  34_acetic_acid_mp2_dz.out  40_benzaldehyde_mp2_dz.out  42_butanal_mp2_dz.out  50_cyclopentanone_mp2_dz.out  56_ethanol_mp2_dz.out  58_ethylacetate_mp2_dz.out  59_ethylbenzene_mp2_dz.out  68_methane_mp2_dz.out  69_methanol_mp2_dz.out  70_methylcyclohexane_mp2_dz.out  75_methyl_hexanoate_mp2_dz.out  79_methyl_peroxide_mp2_dz.out  85_naphthalene_mp2_dz.out  93_o-cresol_mp2_dz.out  96_pentanoic_acid_mp2_dz.out  cho_explicit_maemax.inp  cho_explicit_s_pair_d_maemax.inp  cho_grouped_s_pair_d_maemax.inp  cho_paper_grouped_dxh_maemax.inp  paramfit_cho_explicit_maemax_final.out  paramfit_cho_explicit_maemax_final.params.toml  paramfit_cho_explicit_s_pair_d_maemax.out  paramfit_cho_explicit_s_pair_d_maemax.params.toml  paramfit_cho_grouped_s_pair_d_maemax.out  (+4 more)
src/paramfit/: __init__.py  cli.py  constants.py  io.py  optimizer.py  solvation.py
src/paramfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
user_man/: paramfit_user_manual.aux  paramfit_user_manual.tex  paramfit_user_manual.toc
(+272 files in other folders)
