[project]
name = "paramfit"
version = "0.1.0"
description = "GB-based solvation parameter fitting"
authors = [{name="Betul Ermis"}]
dependencies = [
    "numpy",
    "scipy"
]

[project.scripts]
paramfit = "paramfit.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
